--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /obsidian vault/Runes&Rails/.obsidian
 obsidian vault/Runes&Rails/.obsidian/workspace.json
+obsidian vault/Runes&Rails/.obsidian/workspace.json
